# Multi_Loader

./: README.md
Multi_Loader/: CMakeLists.txt  Gamer.h  artist.cpp  artist.h  artist.ui  designer.cpp  designer.h  designer.ui  dialog_Prog.h  engineer.cpp  engineer.h  engineer.ui  gamer.cpp  gamer.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  musician.cpp  musician.h  musician.ui  programmer.cpp  programmer.h  programmer.ui
Multi_Loader/Picture/: dfgad.qrc
